# buildFi

./: .gitignore  Anchor.toml  Cargo.toml  docker-compose.yml  package-lock.json  package.json  readme.md  tsconfig.json
apps/api/: .env.example  Cargo.toml  README.md
apps/api/migrations/: 001_create_projects.sql
apps/api/src/: config.rs  error.rs  lib.rs  main.rs
apps/api/src/handlers/: projects.rs
apps/api/src/models/: project.rs
apps/api/src/routes/: mod.rs
apps/api/src/store/: memory.rs  mod.rs  postgres.rs
apps/api/tests/: api.rs
apps/web/: README.md  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/builders/: page.tsx
apps/web/app/create/: page.tsx
apps/web/app/explore/: page.tsx
apps/web/app/wallet/: WalletView.tsx  page.tsx
apps/web/components/: ExploreProjectCard.tsx  ExploreView.tsx  Header.tsx  MarketplaceFooter.tsx  ProjectCard.tsx  Providers.tsx
apps/web/components/admin/: AdminGate.tsx  (+5 more)
apps/web/lib/: admin-allowlist.ts  api.ts  build-create-project-tx.ts  build-project-tx.ts  constants.ts  privy-tx-error.ts  program.ts  project-hero-images.ts  project-map.ts  types.ts
docs/: escrow.md  investor-dashboard.md  marketplace.md  problem.md  project-tracking.md  solution.md
programs/buildfi/: Cargo.toml  README.md
programs/buildfi/src/: error.rs  lib.rs
programs/buildfi/src/instructions/: create_project.rs  delete_project.rs  deposit.rs  initialize.rs  mod.rs  refund.rs  release_capital.rs
programs/buildfi/src/state/: builder.rs  buyer.rs  mod.rs  project.rs
tests/: buildfi.ts
(+4 files in other folders)
