[package]
name = "buildfi"
version = "0.1.0"
description = "BuildFi construction financing escrow program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
